--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ body {
   font-family: "Poppins", sans-serif;
 }
 .flexible-container {
+  width: 85%;
   display: flex;
-  margin: 40px;
+  margin-left: 50px;
+  margin-bottom: 50px;
 }
 .my-mission-area h1 {
-  font-size: 40px;
+  font-size: 30px;
 }
 .color-hilight {
   color: crimson;
@@ -16,15 +18,39 @@ body {
   font-size: 50px;
   text-align: center;
 }
-.half-width {
+.single-item {
   width: 30%;
-
   margin-left: 4%;
   padding: 40px;
   background-color: lightblue;
   border-radius: 20px;
 }
-.half-width img {
+.single-item img {
   width: 40%;
   padding-left: 5px;
+}
+.developer-area {
+  width: 80%;
+  display: flex;
+  /* background-image: url(images/shapes/shape-1.png);
+   background-repeat: no-repeat; 
+  background-position: left;  */
+}
+.half-width {
+  width: 50%;
+  padding-left: 5%;
+}
+.half-width img {
+  width: 80%;
+  margin-top: 5%;
+}
+.link-button {
+  text-decoration: none;
+  color: white;
+  background-color: crimson;
+  padding: 10px 25px;
+  border-radius: 7px;
+}
+.developer h2 {
+  font-size: 40px;
 }
