--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 .flexible-container {
   width: 85%;
   display: flex;
   margin-left: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 130px;
 }
 .my-mission-area h1 {
   font-size: 30px;
@@ -32,9 +33,7 @@ body {
 .developer-area {
   width: 80%;
   display: flex;
-  /* background-image: url(images/shapes/shape-1.png);
-   background-repeat: no-repeat; 
-  background-position: left;  */
+  margin-bottom: 130px;
 }
 .half-width {
   width: 50%;
@@ -42,7 +41,6 @@ body {
 }
 .half-width img {
   width: 80%;
-  margin-top: 5%;
 }
 .link-button {
   text-decoration: none;
@@ -51,6 +49,13 @@ body {
   padding: 10px 25px;
   border-radius: 7px;
 }
-.developer h2 {
+.half-width h2 {
   font-size: 40px;
+}
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 0;
 }
