modify html tag, attrubit,class-name, or css style

--- a/style.css
+++ b/style.css
@@ -2,25 +2,44 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
 }
-.start-mission {
+/* start top container */
+.section {
+  padding: 10px 50px;
+}
+.container {
+  width: 1100px;
   display: flex;
+  margin: 0 auto;
 }
-.flexible-container {
-  width: 85%;
-  display: flex;
-  margin-left: 50px;
-  margin-bottom: 130px;
+.left-contant {
+  width: 50%;
 }
-.my-mission-area h1 {
-  font-size: 30px;
+.left-contant h2 {
+  font-size: 50px;
+  font-weight: 400;
+  border-left: crimson 5px solid;
+  padding-left: 16px;
 }
-.color-hilight {
-  color: crimson;
+.orange-color {
+  color: orange;
 }
 
-.heading h1 {
-  font-size: 50px;
+.right-contant {
+  width: 50%;
+}
+.right-contant img {
+  width: 80%;
+  padding: 40px;
+}
+/* end top container */
+
+/* start my mission-area */
+.my-mission-area h1 {
   text-align: center;
+  font-size: 50px;
+}
+.highlight {
+  color: crimson;
 }
 .single-item {
   width: 30%;
@@ -33,17 +52,15 @@ body {
   width: 40%;
   padding-left: 5px;
 }
-.developer-area {
-  width: 80%;
-  display: flex;
-  margin-bottom: 130px;
+/* End my-mission-area */
+
+/* start developer are */
+.dev-left img {
+  width: 400px;
+  height: 400px;
 }
-.half-width {
-  width: 50%;
-  padding-left: 5%;
-}
-.half-width img {
-  width: 80%;
+.dev-right {
+  padding: 40px;
 }
 .link-button {
   text-decoration: none;
@@ -52,9 +69,18 @@ body {
   padding: 10px 25px;
   border-radius: 7px;
 }
-.half-width h2 {
-  font-size: 40px;
+
+.developer-area {
+  padding: 80px;
 }
+.left-item {
+  padding: 40px;
+}
+.right-item img {
+  width: 400px;
+  height: 400px;
+}
+
 footer {
   background-color: black;
   color: white;
